--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -79,10 +79,6 @@ video{
 		<div class="video_operation_menu video_center" style="text-align:left; padding-left:0px; margin-left:48px">
 		    <a onmouseover="showMaiXuTan(true);" class="video_operation_menu_a" string_id="string_maixu">麦序</a>
 
-			<!--
-			<a id="fengping" class="video_operation_menu_a" href="javascript:toggleVideoShowStyle();" >分屏</a>
-			-->
-
 		    <a id="dismiss_class" string_id="string_xiake" class="video_operation_menu_a" href="javascript:dismissClass();" ></a>
 
 		    <div id="maixu_tan" class="maixu_tan" style="display: none; left:-48px" onmouseleave="showMaiXuTan(false);">
@@ -125,7 +121,6 @@ video{
 				  <a href="javascript:goVideoManaerPage();" class="operation_menu_t_btn" >辅助功能</a>
 				  -->
 				  <a id="video_source_peizhi" href="javascript:goVideoSourceSelectPage();" class="operation_menu_t_btn" style="display: none;">视频源设置</a>
-
 				  <a id="show_talk" href="javascript:showTalkDiv();" class="operation_menu_t_btn" string_id="string_open_taolun" text='打开讨论区' style="display: none;">关闭讨论区</a>
 		          <a id='language_select' href="javascript:changeLanguage();" class="En_icon_i Chinese_icon_i"></a>
 		      </div>
@@ -600,7 +595,6 @@ video{
 				  $("#gongping_container").append(template.html());
 			}
 
-
 	  }
 	  var indicatorName = $(".indicator_selected").attr("name");
 	  if(indicatorName == "hudong"){
@@ -1031,7 +1025,7 @@ video{
 	  $("#cloud_file_loading").text(jQuery.i18n.prop("string_loading_more"));
 	  if(fileId!=-1){
 		    $("#historyFileLists").append("<span id='history"+fileId+"' onclick='goHistoryFile("+fileId+")'>"+name+"<span class='check_img_history2'>></span>"+"</span>");
-		  }
+	  }
 	  //$("#cloud_file_loading").remove()
 	  $("#cloud_file_loading").unbind("click");
 	  $("#cloud_file_loading").click(function(){
@@ -1183,7 +1177,7 @@ video{
 		  title: jQuery.i18n.prop("string_ketang_tongji")+'',
 		  shade: 0.8,
 		  area: ['35%', '95%'],
-		  content:url //iframe的url
+		  content:url
 		});
   }
 
@@ -1332,7 +1326,6 @@ video{
 	 var protocal = eval('(' + "{'command':'disconnect_mai','data':{'userId':"+userId+"}}" + ')');
 	 connection.send(protocal);
 	 $('#agora_remote' + userId).remove();
-	 changeFengpingItemStyle();
   }
 
   function agreeConnectMai(userId){
@@ -1368,7 +1361,6 @@ video{
                    localStream.disableAudio();
                };
                onAudioMutedStateChange(localStream.getId());
-               changeFengpingItemStyle();
 		   });
 
 	       navigator.mediaDevices.getUserMedia({ audio: true, video: true })
@@ -1381,15 +1373,14 @@ video{
   }
 
   function prepareVideoRoom(data){
-  	    client = new ExRTC();
+  	     client = new ExRTC();
 
 	 　  client.join(vid+"", userId,userName, function() {
 				 console.log("User " + userId + " join channel successfully");
 				 playLocalVideo();
-				 //playShareVideoSource();
 	 　　 	 }, function() {
-		　	 console.log("Join channel failed");
-	  　 });
+		　	     console.log("Join channel failed");
+	  　     });
 
 
 	    client.on('stream-added', function (evt) {
@@ -1436,7 +1427,6 @@ video{
 			  onAudioMutedStateChange(stream.getId());
 			  //计算当前的大流
 			  showEclassCurrentBigStreamId();
-              changeFengpingItemStyle();
 	    });
 
 	    client.on('stream-removed', function (evt) {
@@ -1905,23 +1895,6 @@ video{
 
   var electronEinwindow = null;
 
-  function toggleVideoShowStyle(){
-      //  var isHidden = $("#right").is(':hidden');
-      //  if(isHidden){
-      //      $("#right").show();
-      //      $("#left").css("width","240px");
-      //      $(".fenping_video").css({'width':'230px','height':'160px'});
-      //
-      //  }else{
-      //      $("#right").hide();
-      //      $("#left").css("width","100%");
-      //
-      //      changeFengpingItemStyle();
-      //  }
-      // changeFengpingTipName();
-
-  }
-
   function toFloatShowType(){
       if($("#right").is(':hidden')){
           return;
@@ -1966,37 +1939,6 @@ video{
       electronEinwindow.webContents.executeJavaScript('showActionBarClose(true);');
       electronEinwindow.setAlwaysOnTop(false);
       electronEinwindow.setResizable(true);
-  }
-
-  function changeFengpingTipName(){
-      var isHidden = $("#right").is(':hidden');
-      if(isHidden){
-          $("#fengping").text("取分");
-      }else{
-          $("#fengping").text("分屏");
-	  }
-  }
-
-  function changeFengpingItemStyle(){
-      // showBigVideo(null,false,false);
-      // var isHidden = $("#right").is(':hidden');
-      // if(isHidden){
-      //     var videoCount = $("#video_container").children().length;
-      //     var width = "calc(50% - 10px)";
-      //     var height = "50%";
-      //     if(videoCount == 1){
-      //         width = "100%";
-      //         height = "calc(100% - 12px)";
-      //     }else if(videoCount == 2){
-      //         width = "calc(50% - 10px)";
-      //         height = "calc(100% - 12px)";
-      //     }else{
-      //         width = "calc(50% - 10px)";
-      //         height = "calc(50% - 12px)";
-      //     }
-      //     var videos = $(".fenping_video");
-      //     videos.css({'width':width,'height':height});
-	  // }
   }
 
   function goVideoManaerPage(){
@@ -2044,14 +1986,16 @@ video{
 	});
 
     function testSendImg(){
-//        var message = {};
-//        message.fromUser = {};
-//        message.fromUser.colUid = 119665;
-//        message.fromUser.userName = "王鹏飞";
-//        message.fromUser.colUtype = "TEAC";
-//        message.attachment = {};
-//        message.attachment.address = "http://60.205.86.217/upload9/2018-11-26/15/024d0b9d-9393-4225-a2f3-ff90739b0efe.webp";
-//        showMessage(message);
+        /*
+        var message = {};
+        message.fromUser = {};
+        message.fromUser.colUid = 119665;
+        message.fromUser.userName = "王鹏飞";
+        message.fromUser.colUtype = "TEAC";
+        message.attachment = {};
+        message.attachment.address = "http://60.205.86.217/upload9/2018-11-26/15/024d0b9d-9393-4225-a2f3-ff90739b0efe.webp";
+        showMessage(message);
+        */
 	}
 
 </script>
