--- a/public/schoolClass/videoSourceSelect.html
+++ b/public/schoolClass/videoSourceSelect.html
@@ -311,7 +311,7 @@
     }
 
     function startServerRecord() {
-        if ($("#recordingTipText").text() == '点击录屏') {
+        if ($("#recordingTipText").text() == '服务端录屏') {
             var config = {};
             config.maxWidth = 720;
             config.minWidth = 720;
