--- a/public/schoolClass/classMobileAssistant.html
+++ b/public/schoolClass/classMobileAssistant.html
@@ -22,7 +22,7 @@
     <div class="topic_box">
         <div style="position: relative;">
                 <div class="topic_nav">
-                    <div class="nav_text">
+                    <div class="nav_text text-hidden">
 
                     </div>
                     <div class="nav_close">X</div>
