--- a/public/schoolClass/classMobileAssistant.html
+++ b/public/schoolClass/classMobileAssistant.html
@@ -94,13 +94,17 @@
    getUserRootCloudSubjects(userId,true);
 //   listCloudSubject(cloudFileId,pageNo);
    //监听
-   simpleMS.msgWsListener = {
+   simpleMS.clazzWsListener = {
         onError: function (errorMsg) {
+            console.log(errorMsg);
           }, onWarn: function (warnMsg) {
+            console.log(warnMsg);
           }, onMessage: function (info) {
-             console.log(info,'info');
-             if(info.command == 'pushTopicInAssistant'){
-                 layer.msg('推送成功');
+             if(info.command == 'pushTopicInAssistantSuccess'){
+                 var roomid = info.data.vid;
+                 if(roomid == vid){
+                     layer.msg('推送成功');
+                 }
              }
           }
         };
@@ -127,7 +131,7 @@
         if(quesArr.length <= 0){
             layer.msg("请先选中要推送的题目");
         }else{
-            var protocal = eval('(' + "{'command':'pushTopicInAssistant','data':{'sids':'"+quesArr.join(',')+"'}}" + ')');
+            var protocal = eval('(' + "{'command':'pushTopicInAssistant','data':{'sids':'"+quesArr.join(',')+"',vid:'"+vid+"'}}" + ')');
             simpleMS.send(protocal);
         }
     }
